fixed scrollbar issue for firefox

--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
+  scrollbar-width: none;
 }
 
 html,
